force-app/main/default/objects/numm__GDTItem__c/numm__GDTItem__c.object-meta.xml
<CustomObject>
    <label>Ligne des temps</label>
    <nameField>
        <displayFormat>GDTI-{0000000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes des temps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>