force-app/main/default/objects/numm__GDTItem__c/fields/numm__Facturable__c.field-meta.xml
<CustomField>
    <fullName>numm__Facturable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facturable</label>
    <type>Checkbox</type>
</CustomField>