force-app/main/default/objects/numm__GDTItem__c/fields/numm__GDTHeader__c.field-meta.xml
<CustomField>
    <fullName>numm__GDTHeader__c</fullName>
    <label>Gestion des temps</label>
    <referenceTo>numm__GDT__c</referenceTo>
    <relationshipLabel>Lignes des temps</relationshipLabel>
    <relationshipName>GDTItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>