force-app/main/default/objects/numm__GDTItem__c/fields/numm__NbHeure__c.field-meta.xml
<CustomField>
    <fullName>numm__NbHeure__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nb d&#39;unité de temps</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>