force-app/main/default/objects/numm__GDTItem__c/fields/numm__NbMinutes__c.field-meta.xml
<CustomField>
    <fullName>numm__NbMinutes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NbMinutes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>