force-app/main/default/objects/numm__GDTItem__c/fields/numm__Produit__c.field-meta.xml
<CustomField>
    <fullName>numm__Produit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Prestation</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le produit doit être un produit de gestion de temps</errorMessage>
        <filterItems>
            <field>numm__Item__c.numm__IsGDT__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__Item__c</referenceTo>
    <relationshipLabel>Lignes des temps</relationshipLabel>
    <relationshipName>Lignes_des_temps</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>