force-app/main/default/objects/numm__GDTItem__c/validationRules/numm__MoisAnneeEnteteLigne.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__MoisAnneeEnteteLigne</fullName>
    <active>true</active>
    <description>Le mois et l&#39;année de la ligne doit être le même que celui de l&#39;entête</description>
    <errorConditionFormula>OR (TEXT(Year(numm__Date__c)) !=  numm__GDTHeader__r.numm__Annee__c , Month(numm__Date__c)!= numm__GDTHeader__r.numm__Mois__c )</errorConditionFormula>
    <errorDisplayField>numm__Date__c</errorDisplayField>
    <errorMessage>Le mois et l&#39;année de la ligne doit être le même que celui de l&#39;entête</errorMessage>
</ValidationRule>