force-app/main/default/objects/numm__GDTItem__c/validationRules/numm__VerifNbMinute.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__VerifNbMinute</fullName>
    <active>true</active>
    <errorConditionFormula>numm__NbMinutes__c &gt;59</errorConditionFormula>
    <errorDisplayField>numm__NbMinutes__c</errorDisplayField>
    <errorMessage>Rappel : 1 heure  = 60 minutes ...</errorMessage>
</ValidationRule>